--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
     <application
         android:icon="@drawable/ic_launcher"
+	android:label="@string/app_name">
+	<!--
         android:label="@string/app_name" android:theme="@android:style/Theme.Translucent.NoTitleBar">
+	-->
         <activity
             android:name=".BrowserActivity">
 	    <intent-filter>
