--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19"/>
     <application
         android:icon="@drawable/ic_launcher"
 	android:label="@string/app_name">
@@ -73,7 +73,8 @@
 	    -->
         </activity>
         <activity
-            android:name=".SettingsActivity">
+            android:name=".SettingsActivity"
+		android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
 	    <intent-filter>
 		<action android:name="android.intent.action.MAIN" />
 		<category android:name="android.intent.category.LAUNCHER" />
