--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19"/>
     <application
         android:icon="@drawable/ic_launcher"
-	android:label="@string/app_name">
+	android:label="@string/app_name"
+	android:theme="@android:style/Theme.Holo.Light">
 	<!--
         android:label="@string/app_name" android:theme="@android:style/Theme.Translucent.NoTitleBar">
 	-->
         <activity
-            android:name=".BrowserActivity">
+            android:name=".BrowserActivity"
+	    android:theme="@android:style/Theme.Holo.NoActionBar.TranslucentDecor">
 	    <!--
 	    <intent-filter>
 		<action android:name="android.intent.action.MAIN" />
@@ -74,7 +76,7 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-		android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
+		android:label="@string/app_name">
 	    <intent-filter>
 		<action android:name="android.intent.action.MAIN" />
 		<category android:name="android.intent.category.LAUNCHER" />
