--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19"/>
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
 	android:label="@string/app_name"
-	android:theme="@android:style/Theme.Holo.Light">
+	android:theme="@android:style/Theme.Holo">
 	<!--
         android:label="@string/app_name" android:theme="@android:style/Theme.Translucent.NoTitleBar">
 	-->
